--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "xspecs-cli",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "CLI tools to use with XSpecs",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "bin": {
+    "xspecs-cli": "./index.js"
   },
   "repository": {
     "type": "git",
