--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "send-test-results-to-xspecs",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Send test results to xspecs",
   "main": "index.js",
   "scripts": {
@@ -21,5 +21,8 @@
   "homepage": "https://github.com/xolvio/send-test-results-to-xspecs#readme",
   "dependencies": {
     "yargs": "^11.0.0"
+  },
+  "bin": {
+    "send-test-results-to-xspecs": "./bin/send-test-results-to-xspecs.js"
   }
 }
